# rust_axum_sqlx

./: .env  .env.example  Cargo.toml  Makefile  Readme.md
migrations/: 20220819100221_init.sql
src/: main.rs
src/cors/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handler/: categories.rs  mod.rs  posts.rs  users.rs
src/models/: category.rs  mod.rs  post.rs  user.rs
src/repository/: category.rs  mod.rs  post.rs  user.rs
src/router/: mod.rs
src/services/: img_upload.rs  mod.rs
src/tests/: mod.rs
src/tests/mock/: category.rs  mod.rs  post.rs  user.rs
src/tests/repository/: mod.rs
src/usecase/: category.rs  post.rs  user.rs
